--- a/crates/interledger-settlement-engines/Cargo.toml
+++ b/crates/interledger-settlement-engines/Cargo.toml
@@ -37,6 +37,8 @@ sha3 = "0.8.2"
 num-bigint = "0.2.2"
 num-traits = "0.2.8"
 lazy_static = "1.3.0"
+secrecy = { git = "https://github.com/iqlusioninc/crates", branch = "develop", features = ["serde", "bytes"] }
+zeroize = { git = "https://github.com/iqlusioninc/crates", branch = "develop", features = ["bytes"] }
 
 [dev-dependencies]
 lazy_static = "1.3"
