--- a/crates/interledger-api/Cargo.toml
+++ b/crates/interledger-api/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1.0.39"
 tower-web = "0.3.7"
 reqwest = "0.9.18"
 url = "2.1.0"
+tokio-executor = "0.1.7"
 tokio-retry = "0.2.0"
 
 [badges]
