feat(main.rs etc.): cli improvement
Every command accepts arguments, config file settings, env vars. `interledger` and
`interledger-settlement-engines` are almost consistent.

Signed-off-by: Taiga Nakayama <dora@dora-gt.jp>

--- a/crates/interledger/Cargo.toml
+++ b/crates/interledger/Cargo.toml
@@ -6,6 +6,7 @@ description = "Interledger client library"
 license = "Apache-2.0"
 edition = "2018"
 repository = "https://github.com/interledger-rs/interledger-rs"
+default-run = "interledger"
 
 [lib]
 name = "interledger"
