--- a/crates/interledger/Cargo.toml
+++ b/crates/interledger/Cargo.toml
@@ -65,6 +65,11 @@ serde = "1.0.99"
 tokio = "0.1.20"
 url = "2.1.0"
 lazy_static = "1.3.0"
+rust-ini = "0.13"
+serde-hjson = "0.8.2"
+serde_json = "1.0.40"
+toml = "0.4.1"
+yaml-rust = "0.4"
 
 [dev-dependencies]
 net2 = "0.2.33"
