--- a/crates/interledger-settlement-engines/Cargo.toml
+++ b/crates/interledger-settlement-engines/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
 edition = "2018"
 
+[features]
+default = ["yaml", "toml"]
+hjson = ["serde-hjson"]
+ini = ["rust-ini"]
+yaml = ["yaml-rust"]
+
 [dependencies]
 tower-web = "0.3.7"
 hex = "0.3.2"
@@ -38,11 +44,10 @@ num-bigint = "0.2.2"
 num-traits = "0.2.8"
 lazy_static = "1.3.0"
 config = "0.9.3"
-rust-ini = "0.13"
-serde-hjson = "0.8.2"
-toml = "0.4.1"
-yaml-rust = "0.4"
-libc = "0.2.62"
+rust-ini = { version = "0.13", optional = true }
+serde-hjson = { version = "0.8.2", optional = true }
+toml = { version = "0.4.1", optional = true }
+yaml-rust = { version = "0.4", optional = true }
 
 [dev-dependencies]
 lazy_static = "1.3"
