--- a/crates/interledger-settlement-engines/Cargo.toml
+++ b/crates/interledger-settlement-engines/Cargo.toml
@@ -44,6 +44,7 @@ num-bigint = "0.2.2"
 num-traits = "0.2.8"
 lazy_static = "1.3.0"
 config = "0.9.3"
+libc = "0.2.62"
 rust-ini = { version = "0.13", optional = true }
 serde-hjson = { version = "0.8.2", optional = true }
 toml = { version = "0.4.1", optional = true }
