--- a/crates/interledger/Cargo.toml
+++ b/crates/interledger/Cargo.toml
@@ -69,6 +69,7 @@ serde = "1.0.99"
 tokio = "0.1.20"
 url = "2.1.0"
 lazy_static = "1.3.0"
+libc = "0.2.62"
 rust-ini = { version = "0.13", optional = true }
 serde-hjson = { version = "0.8.2", optional = true }
 serde_json = { version = "1.0.40", optional = true }
