--- a/crates/interledger-stream/Cargo.toml
+++ b/crates/interledger-stream/Cargo.toml
@@ -30,6 +30,7 @@ ring = "0.14.6"
 [dev-dependencies]
 env_logger = "0.6.1"
 interledger-router = { path = "../interledger-router", version = "0.2.1" }
+interledger-ccp = { path = "../interledger-ccp", version = "0.1" }
 lazy_static = "1.3.0"
 regex = "1.1.6"
 tokio = "0.1.16"
