--- a/crates/interledger-settlement-engines/Cargo.toml
+++ b/crates/interledger-settlement-engines/Cargo.toml
@@ -44,7 +44,7 @@ sha3 = "0.8.2"
 num-bigint = "0.2.2"
 num-traits = "0.2.8"
 lazy_static = "1.3.0"
-config = "0.9.3"
+config = { version = "0.9.3", features = [ "json", "yaml" ] }
 libc = "0.2.62"
 rust-ini = { version = "0.13", optional = true }
 serde-hjson = { version = "0.8.2", optional = true }
