--- a/crates/interledger/Cargo.toml
+++ b/crates/interledger/Cargo.toml
@@ -13,7 +13,7 @@ name = "interledger"
 path = "src/lib.rs"
 
 [features]
-default = ["cli", "yaml", "json", "toml"]
+default = ["cli"]
 cli = [
     "btp",
     "ccp",
@@ -34,10 +34,6 @@ store-memory = ["interledger-store-memory"]
 ildcp = ["interledger-ildcp"]
 spsp = ["interledger-spsp", "stream"]
 stream = ["interledger-stream", "ildcp"]
-hjson = ["serde-hjson"]
-ini = ["rust-ini"]
-json = ["serde_json"]
-yaml = ["yaml-rust"]
 
 [dependencies]
 base64 = "0.10.1"
@@ -70,11 +66,6 @@ tokio = "0.1.20"
 url = "2.1.0"
 lazy_static = "1.3.0"
 libc = "0.2.62"
-rust-ini = { version = "0.13", optional = true }
-serde-hjson = { version = "0.8.2", optional = true }
-serde_json = { version = "1.0.40", optional = true }
-toml = { version = "0.4.1", optional = true }
-yaml-rust = { version = "0.4", optional = true }
 
 [dev-dependencies]
 net2 = "0.2.33"
